--- a/style.css
+++ b/style.css
@@ -55,9 +55,11 @@ li a:hover{
 	position: relative;
 	top: 100px;
 	margin: 20px;
+	left: 175px;
 }
 
 .block{
+	margin: 5px;
 	width: 300px;
 	height: 220px;
 	display: inline-block;
